backend/api/tests/integration/pro_dev/snapshots/integration__pro_dev__unit__get_live.snap
---
source: tests/integration/pro_dev/unit.rs
expression: body
---
{
  "displayName": "prod_dev2 unit 1",
  "description": "PDF",
  "pdfId": "128e0870-6813-11ec-a1fd-73f800abf897"
}
