backend/api/tests/integration/pro_dev/snapshots/integration__pro_dev__unit__update_index-1.snap
---
source: tests/integration/pro_dev/unit.rs
expression: body
---
{
  "id": "f77222a6-906b-11ed-b4f6-2f6dfab2ea0a",
  "publishedAt": "2022-06-24T18:35:33.636556Z",
  "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
  "authorName": "Bobby Tables",
  "likes": 0,
  "plays": 0,
  "liveUpToDate": false,
  "proDevData": {
    "draftOrLive": "draft",
    "displayName": "pro_dev name1",
    "language": "en",
    "description": "draft test description",
    "lastEdited": "2021-03-04T00:46:26.134651Z",
    "duration": null,
    "privacyLevel": "public",
    "otherKeywords": "",
    "translatedKeywords": "",
    "translatedDescription": {},
    "cover": {
      "id": "3a272c30-906d-11ed-b4f6-1fef9f7412be",
      "kind": "Cover",
      "is_complete": true
    },
    "categories": [],
    "additionalResources": [],
    "units": [
      "e0984370-906c-11ed-b4f6-3f864931e86f",
      "e098451e-906c-11ed-b4f6-d3927726efad",
      "09225240-906d-11ed-b4f6-ffc72cfa1509"
    ]
  }
}
